# Mozilla-Tamarin-Redux

./: .cproject  .hgignore  Doxyfile  Makefile.am  README.md  avm.gypi  configure  configure.py  generate.py  manifest.mk
.hgpatchinfo/: gcmember-gcref-divorce.dep
AVMPI/: AVMPI.h  AvmAssert.cpp  MMgcPortMac.cpp  MMgcPortSymbian.cpp  MMgcPortUnix.cpp  MMgcPortWin.cpp  PosixMMgcPortUtils.cpp  SpyUtilsPosix.cpp  SpyUtilsWin.cpp  SpyUtilsWinMo.cpp  float4Support.cpp  float4Support.h  manifest.mk
MMgc/: AllocationMacros.h  BasicList.h  FixedAlloc-inlines.h  FixedAlloc.cpp  FixedAlloc.h  FixedMalloc-inlines.h  FixedMalloc.cpp  FixedMalloc.h  GC-inlines.h  GC.cpp  GC.h  GCAlloc-inlines.h  GCAlloc.cpp  GCAlloc.h  GCAllocObject.cpp  GCAllocObject.h  GCAllocObjectGeneric.cpp  GCAllocObjectMac.cpp  GCAllocObjectUnix.cpp  GCAllocObjectWin.cpp  GCDebug.cpp  GCDebug.h  GCDebugMac.cpp  GCDebugUnix.cpp  GCDebugWin.cpp  GCGlobalNew.cpp  GCGlobalNew.h  GCHashtable-inlines.h  GCHashtable.cpp  GCHashtable.h  GCHeap-inlines.h  GCHeap.cpp  GCHeap.h  GCHeapGeneric.cpp  GCHeapMac.cpp  GCHeapUnix.cpp  GCHeapWin.cpp  GCLargeAlloc-inlines.h  GCLargeAlloc.cpp  GCLargeAlloc.h  (+68 more)
MMgc/platform/: MMgcPortMac.cpp
MMgc/run_alloc/: run_alloc.vcproj
MMgc/symbian/: portapi_mmgc.cpp
VMPI/: AvmAssert.h  GenericPortUtils.cpp  MMgcPortMac.cpp  MMgcPortSymbian.cpp  MMgcPortUnix.cpp  MMgcPortWin.cpp  MacDebugUtils.cpp  MacPortUtils.cpp  PosixPortUtils.cpp  PosixSpecificUtils.cpp  SpinLockMac.cpp  SpinLockSymbian.cpp  SpinLockUnix.cpp  SpinLockWin.cpp  SpinLockWin.h  SpyUtilsMac.cpp  SpyUtilsPosix.cpp  SpyUtilsWin.cpp  SpyUtilsWinMo.cpp  SymbianDebugUtils.cpp  SymbianPortUtils.cpp  ThreadsPosix-inlines.h  ThreadsPosix.cpp  ThreadsWin.cpp  UnixDebugUtils.cpp  VMPI.h  WinDebugUtils.cpp  WinPortUtils.cpp  manifest.mk
aot/: AOTCompiler.cpp  AOTCompiler.h  AOTStubs.cpp  AOTStubs.h  AOTStubs.py  manifest.mk
axscript/: ActiveScript.cpp  ActiveScriptError.cpp  ActiveScriptError.h  AdaptActiveScriptSite.cpp  AdaptActiveScriptSite.h  ByteArrayGlue.cpp  COMErrorClass.cpp  COMErrorClass.h  DataIO.cpp  Domain.as  DomainClass.cpp  DomainClass.h  ExcepInfo.cpp  IActiveScriptSiteConsumer.cpp  IDispatchConsumer.cpp  IDispatchConsumer.h  IDispatchProvider.cpp  IDispatchProvider.h  OutputStream.cpp  OutputStream.h  Profiler.h  README.txt  Resource.h  SystemClass.as  SystemClass.cpp  SystemClass.h  axtam.cpp  axtam.h  axtam.rc  axtam.rgs  axtoplevel.cpp  axtoplevel.h  mscom.as  mscom.cpp  mscom.h
codegen/: Amd64Assembler.cpp  ArmAssembler.cpp  CodegenLIR.cpp  CodegenLIR.h  CodegenMIR.cpp  CodegenMIR.h  Ia32Assembler.cpp  PpcAssembler.cpp  SparcAssembler.cpp  manifest.mk
core/: AbcData.cpp  AbcEnv-inlines.h  AbcEnv.cpp  AbcEnv.h  AbcGen.cpp  AbcGen.h  AbcParser-inlines.h  AbcParser.cpp  AbcParser.h  AbstractFunction.cpp  AbstractFunction.h  ActionBlockConstants.cpp  ActionBlockConstants.h  Array.as  ArrayClass.cpp  ArrayClass.h  ArrayObject-inlines.h  ArrayObject.cpp  ArrayObject.h  AtomArray-inlines.h  AtomArray.cpp  AtomArray.h  AtomConstants.cpp  AtomConstants.h  AtomWriteBarrier-inlines.h  AtomWriteBarrier.h  AvmCore-inlines.h  AvmCore.cpp  AvmCore.h  AvmDebug.cpp  AvmDebug.h  AvmDebugGeneric.cpp  AvmDebugUnix.cpp  AvmDebugWin.cpp  AvmLog.cpp  AvmLog.h  AvmPlusScriptableObject.cpp  AvmPlusScriptableObject.h  AvmSerializer.cpp  AvmSerializer.h  (+319 more)
doc/: abcFormat-46-16.txt  apiversioning.html  apiversioning.txt  avmspec.doxyfile  bytecode.doxyfile  verifier.txt
esc/: README  temp.txt
eval/: backlog.txt  documentation.txt  eval-abc-inlines.h  eval-abc.cpp  eval-abc.h  eval-avmplus.cpp  eval-cogen-expr.cpp  eval-cogen-inlines.h  eval-cogen-stmt.cpp  eval-cogen.cpp  eval-cogen.h  eval-compile.cpp  eval-compile.h  eval-lex-inlines.h  eval-lex-xml.cpp  eval-lex.cpp  eval-lex.h  eval-parse-config.cpp  eval-parse-expr.cpp  eval-parse-inlines.h  eval-parse-stmt.cpp  eval-parse-xml.cpp  eval-parse.cpp  eval-parse.h  eval-unicode.cpp  eval-unicode.h  eval-util-inlines.h  eval-util.cpp  eval-util.h  eval.h  generate-keyword-lexer.as  generate-unicode-tables.c  manifest.mk  smoketest.as
extensions/: Dictionary.as  DictionaryGlue.cpp  DictionaryGlue.h  JavaGlue.cpp  JavaGlue.h  README.selftests  ST_avmplus_basics.cpp  ST_avmplus_basics.st  ST_avmplus_builtins.cpp  ST_avmplus_builtins.st  ST_avmplus_peephole.cpp  ST_avmplus_peephole.st  ST_avmplus_vector_accessors.st  ST_mmgc_543560.cpp  ST_mmgc_543560.st  ST_mmgc_575631.cpp  ST_mmgc_575631.st  ST_mmgc_580603.cpp  ST_mmgc_580603.st  ST_mmgc_603411.st  ST_mmgc_637993.st  ST_mmgc_basics.cpp  ST_mmgc_basics.st  ST_mmgc_dependent.cpp  ST_mmgc_dependent.st  (+36 more)
(+5823 files in other folders)
